[package]
name = "dv-hls-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream"] }
bytes = "1"
aes = "0.8"
ctr = "0.9"
quick-xml = "0.36"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
hex = "0.4"
url = "2"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
hex = "0.4"
